<resources>
    <string name="app_name">ScarletLetter</string>
    <string name="home">Welcome to the Scarlet Letter Journal!</string>
    <string name="home2">Use the Buttons on the side to navigate the app.</string>
    <string name="rTitle">Reflection on this Journal:</string>
    <string name="r1">I chose to make a virtual journal in form of an application because I can use my knowledge of app making and my creativity to express the ideas in the novel. I made an app for The Epic of Gilgamesh
        and a few other projects in other classes. I like this format because I can design something that is unique and also educate others by sharing the app with my peers. My journal does not have images in it because I
        wanted the theme of this journal to be mainly about the quotes and analysis. Since red and black were two significant colors represented in the novel, I also wanted as much red and black as possible in the design;
        adding pictures would disrupt the flow of red. The quotes that I selected for the journal provided me with a good understanding of the novel since they are detailed and make me imagine the events of the story as they
        are happening. Keeping this journal was helpful since I could gradually add to it as I read and also tweak the design based on how the app looked after each edit. When I found a good quote to use that had a lot of
        imagery or was at a key point in the story, I reread parts of the story before and after it to get a better understanding of what was happening. This made reading the novel a longer process but it was needed to
        make the journal as thorough as possible. </string>
    <string name="dTitle">How Does Roger Chillingworth Change Throughout the Novel?</string>
    <string name="d1">In the beginning of the novel, Chillingworth is seen in the crowd surrounding Hester Prynne and the prison. His facial expressions and body movement reveal his sharpness, which
        contributes to the understanding of his background later in the novel.</string>
    <string name="dq2">On page 56, the author describes Chillingworth\'s appearance: \n  \"&#8230;his look became keen and penetrative, like a snake gliding swiftly over them, and making one little pause.\" \n
        \"His face darkened with some powerful emotion.\"</string>
    <string name="d2">At first, Chillingworth seems sharp and cunning based on the comparison between his movements and those of a snake. The description of his facial expression as being keen and penetrative
        creates an image of a sharp-eyed figure focused on one object or person; in this case, he is focused on Hester Prynne, who is standing outside the prison gates. This initial observation makes him seem
        like a secretive person as he puts his finger to his lips when making eye contact with Hester Prynne.</string>
    <string name="dq3">Bottom of page 65, inside the prison cell: \n \"Prithee, friend, leave me alone with my patient,\"said the practitioner. \"Trust me, good jailer, you shall briefly have peace in your house; and,
        I promise you, Mistress Prynne shall hereafter be more amenable to just authority than you may have found her heretofore \"</string>
    <string name="aTitle">What Significant Actions Does Roger Chillingworth Perform?</string>
    <string name="a1">Throughout the novel, Roger Chillingworth decides to take action in response to other event. This not only adds to our understanding of him but it also influences other characters</string>
    <string name="aq2">On page 103, In Governor Bellingham\'s palace, Chillingworth questions Mr.Wilson about Pearl:\n\" Would it be beyond a philosopher’s research, think ye, gentlemen, to analyse that child’s nature,
        and, from it make a mould, to give a shrewd guess at the father? \" </string>
    <string name="a2">This decision to ask Mr. Wilson if it was reasonable for him to find the father implies that Chillingworth is eager to actually find the father of the child and make it apparent to the officials of
        their society like the ones he is speaking to in Governor Bellingham\'s palace. This contributes to the developing theme by qualifying Chillingworth\'s desire to find the person Hester Prynne had an affair with.
        Knowing that Chillingworth is Dimmesdale\'s close friend, and that Dimmesdale had the affair with Hester Prynne, the readers have a feeling that there will be increased tensions between the two characters.
        The situation might compromise the health of their relationship further along in the novel.</string>
    <string name="aq3">On pages 114-115, Chillingworth and Dimmesdale are in the same room discussing the strange dark weeds Chillingworth gathered from the grave. Chillingworth says that th weeds, \"&#8230; sprung up out of a
        buried heart, to make manifest an unspoken crime. \", Dimmesdale thinks that \"&#8230; the hearts holding such miserable secrets as you speak of will yield them up, at that last day &#8230;\". Lastly, Chillingworth
        responds to Dimmesdale by asking, \" Then why not reveal them here? \".</string>
    <string name="a3">Chillingworth\'s decision to bring the dark weeds from the graves and characterize them as weeds that reveal secrets of the dead show his determination of understanding how people\'s secrets can be revealed
        Based on Chillingworth\'s initial description about the dark weeds, it seems that the secrets of people buried in the graves are manifested in the dark weeds themselves. Dimmesdale tries to correct Chillingworth by
        speaking of secrets being revealed on \"&#8230; the last day &#8230;\". After this, Chillingworth abruptly asks Dimmesdale \"&#8230; why not reveal them here &#8230;\" which can be interpreted as Chillingworth asking
        Dimmesdale to reveal his own secrets at that moment. This dialogue is significant since it shows the measures Chillingworth goes to make Dimmesdale reveal his inner secrets which is torture for him.
        </string>
    <string name="a33">This can be seen directly after this dialogue when Chillingworth emphasizes his point of people revealing their secrets earlier:</string>
    <string name="aq4">Page 115, \"&#8230; should not the guilty ones sooner avail themselves of this unutterable solace ?\"</string>
    <string name="a4">Dimmesdale says that they mostly do reveal their secrets earlier and he starts to gripe his own heart. This relates back to the previous analysis and shows how Chillingworth, while being Dimmesdale\'s
        physician and medical assistant, manages to inflict pain and hardship on Dimmesdale. It also shows that Dimmesdale has his own secret that Chillingworth attempts to uncover.</string>
    <string name="sTitle">What Symbols Represent Roger Chillingworth?</string>
    <string name="s1">Chillingworth is represented by a few symbols, referencing to the Bible or to the novel\'s environment, throughout the novel </string>
    <string name="sq2">On page 56, the author describes Chillingworth\'s appearance: \n  \"&#8230;his look became keen and penetrative, like a snake gliding swiftly over them, and making one little pause.\"\n
        \"His face darkened with some powerful emotion.\"</string>
    <string name="s2">The reference of the snake in this quote is seen in other works of literature such as the Epic of Gilgamesh and it represents the snake from the Garden of Eden. The snake, or serpent, referenced in the
        Biblical story is described as cunning, intimidating, and evil.</string>
    <string name="s22"> These qualities can also be used to describe Chillingworth:</string>
    <string name="sq3">On page 171, Hester Prynne describes Chillingworth as \"&#8230;a new horror &#8230;\" and that there is \"&#8230;a strange secrecy in his nature &#8230;\".\n Dimmesdale also exclaims to Hester Prynne,
        \"&#8230;how am I to live longer, breathing he same air with this deadly enemy? \"\n Hester Prynne further characterizes Chillingworth by saying to Dimmesdale , \" Thy heart must be no longer under his evil eye!\"
        </string>
    <string name="s3">From the dialogue on page 171, certain words such as \"horror\", \"secrecy\", \"deadly\", and \"evil\" all relate to the qualities of the snake in the Garden of Eden. This shows a direct relationship between
        the role Chillingworth plays in this novel and the snake in the Garden of Eden. </string>
    <string name="sq4">A name that is featured many times throughout the novel is \"the Black Man\". It is mentioned earlier in the novel on page 70:\n\"Art thou like the Black Man that haunts the forest round about us?\"\n
        Hester Prynne, after saying the above quote also asks Chillingworth, \" Hast thou enticed me into a bond that will prove the ruin of my soul? \". Chillingworth responds, \" Not thy soul &#8230;No not thine! \".\n
        Page 112 also contains a direct reference to the Devil:\n\"Reverend Arthur Dimmesdale &#8230;was haunted either by Satan himself, or Satan\'s emissary, in the guise of old Roger Chillingworth\".
        </string>
    <string name="s4">The Black Man is another representation of evil and originated from primitive religions. In Christianity, the Black Man is considered a devil in disguise of an animal or a person dressed in black. This
        fits with the idea of Chillingworth being an evil character in the book. Like a devil, Chillingworth, torments and slowly weakens Dimmesdale throughout the novel. Dimmesdale also fears Chillingworth and his methods
        towards the end of the novel. When Chillingworth says that he isn\'t looking to ruin Hester Prynne\'s soul, he indirectly says that he will ruin the soul of who she had an affair with, which is Dimmesdale.
        Hester Prynne is also affected by Chillingworth and loathes him incredibly throughout the novel.
        </string>
    <string name="sq5">The symbol of darkness is also associated with Chillingworth. Darkness is similar to the Black Man from above but it is not directly connected to a devil, instead it is more related to the presence of
        evil or hardship. Early in the novel, the prison is described as a \" darksome apartment \" and a \" passage-way \".</string>
    <string name="s5">The darkness of the prison relates to confinement or secrecy, since when it is dark, things become obscure and hard to detect. This is much like Chillingworth since he is also described as secretive in
        nature. Hester Prynne also refuses to tell Chillingworth who she had an affair with, which alligns with the theme of obscurity.</string>
    <string name="s55">In addition, Chillingworth\'s visual appearance has darker features:</string>
    <string name="sq6">On page 56, Chillingworth\'s visual appearance is described: \"His face darkened with some powerful emotion.\", and on page 99, in Governor Bellingham\'s palace: \n \"&#8230;a change had come over his
        features—how much uglier they were, how his dark complexion seemed to have grown duskier &#8230;\"</string>
    <string name="s6">These quotes show that Chillingworth\'s appearance itself has the theme of darkness embedded in it. This is good for characterizing Chillingworth as a dark, ominous, secretive person with evil intentions.
        These intentions can be seen by the way Dimmesdale reacts to Chillingworth, and the pain that is caused by Chillingworth on Dimmesdale and Hester Prynne.</string>
</resources>