<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#bae7b2b4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sTitle"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s1"
                android:gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sq2"
                android:textSize="20sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s2"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s22"
                android:gravity="center"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sq3"
                android:textSize="20sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s3"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sq4"
                android:textSize="20sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s4"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sq5"
                android:textSize="20sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s5"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s55"
                android:gravity="center"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sq6"
                android:textSize="20sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s6"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>