<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#bae7b2b4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dTitle"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d1"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dq2"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17.5sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>